<resources>
    <string name="app_name">Tracking Management System</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_create_bar_codes">Generar códigos de barras</string>

    <string name="menu_home">Gestión de Inventarios</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="home_second">Home Second</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Usuario</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Ingresar</string>
    <string name="action_sign_in_short">Sign in </string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="forgetpass">Did you forget your password?</string>
    <string name="action_register">Register</string>
    <string name="name_register">First Name</string>
    <string name="last_name_register">Last Name</string>
    <string name="email_register">Email</string>
    <string name="password_email">Contraseña</string>
    <string name="create_account_register">Create Account</string>

    <string name="email_forget_password">Email</string>
    <string name="send_forget_password">Send</string>
    <string name="splash">Fondo Splash</string>
    <string name="logo">Logo Join</string>
    <string name="App_Name">Gestión \n de  \n  Inventarios</string>
    <string name="App_Name2">Gestión de Inventarios</string>
    <string name="App_version"><u>1.0</u></string>


    <string name="numero_de_compra">Orden de Compra No:</string>
    <string name="hintnumerodecompra">12345</string>
    <string name="buscarnumero">Buscar</string>
    <string name="text_toolbar_purchaseorder">Ordenes de Compra</string>
    <string name="text_toolbar_reception">Recepción de Mercaderia</string>
    <string name="button_scanner">Escanear</string>
    <string name="text_toolbar_numerofrag">Fraccionar Compra</string>
    <string name="numero_de_contribuyentes_fraccionar">Colaboradores Requeridos:</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="default_notification_channel_id" translatable="false">channel_01</string>
    <string name="no_internet">No acceso a internet</string>
    <string name="text_wrong_authentication">Credenciales incorrectas</string>
    <string name="text_error_authentication">Error en el proceso de autenticación</string>

    <string name="headder1"><b>No.</b></string>
    <string name="headder2"><b>Código de Barras</b></string>
    <string name="headder3"><b>Cantidad</b></string>
    <string name="headder4"><b>Acción</b></string>
    <string name="headder5"><b>Eliminar</b></string>

    <string name="text_hint_location">Ubicación caja master</string>
    <string name="text_button_location">Finalizar</string>
    <string name="text_toolbar_location">Ubicación de Caja Master</string>
    <string name="text_button_register">Registrar</string>
    <string name="text_hint_bar_code">Código de Barras</string>

    <string name="text_generate_bar_code">Generar</string>
    <string name="text_toolbar_bar_codes">Generar códigos de barra</string>
    <string name="text_hint_number_of_codes">Cantidad de códigos</string>

    <string name="text_toolbar_return_product">Orden de Devolución</string>
    <string name="purchase_order">Orden de Devolución</string>
    <string name="pendingtransferorder_search_text">Buscar Traslados</string>
    <string name="pendingtransferorder_update_text">Actualizar</string>
    <string name="itemtransferorder_order_number">Numero de Pedido: %d</string>
    <string name="itemtransferorder_series_number">Numero de Serie: %s</string>
    <string name="itemtransferorder_series_order_number">Número de Serie Orden: %s</string>
    <string name="assignedpendingoreder_vendor_code">Código del vendedor: %d</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="preparependingorder_title">Traslados Asignados</string>
    <string name="all_loading_text">Cargando…</string>
    <string name="all_start_text">Iniciar</string>
    <string name="transferproductdetail_title">Descripción del Artículo</string>
    <string name="pendingorderdetail_add_box">Añadir caja</string>

    <string name="productdetail_product_code">Código artículo: %d</string>
    <string name="all_size">Talla: %s</string>
    <string name="all_color">Color: %s</string>
    <string name="productdetail_requested_date">Fecha de solicitud: %s</string>
    <string name="productdetail_preparation_date">Fecha de preparación: %s</string>
    <string name="productdetail_requested_quantity">Cantidad solicitada: %d</string>
    <string name="pendingorderdetail_remaining_products">Te quedan %d productos por registrar</string>
    <string name="pendingorderdetail_process_not_initialized">Aún no has iniciado el proceso de registro de productos</string>
    <string name="text_hint_quantity">Cantidad</string>
    <string name="all_series_number">Número Serie: %s</string>
    <string name="all_order_number">Número Pedido: %d</string>
    <string name="all_vendor_code">Vendedor: %d</string>
    <string name="all_product_code">Código articulo: %d</string>
    <string name="all_model">%s-%s</string>
    <string name="all_received_quantity">Cantidad a recibir: %d</string>
    <string name="all_dispatched_quantity">Cantidad despachada: %d</string>

    <!--Header traspasos recibidos-->
    <string name="header_product_code">Cod. Artículo</string>
    <string name="header_reference">Referencia</string>
    <string name="header_size">Talla</string>
    <string name="header_model">Modelo</string>
    <string name="header_color">Color</string>

    <string name="header_ubication">Ubicación</string>
    <string name="header_total_dispatched">Cant. Despachada</string>
    <string name="header_total_received">Cant. Recibida</string>


</resources>

