<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".moduleView.transfer.PendingOrderDetailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_pendingorderdetail_header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@color/gray"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_pendingorderdetail_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="Serie + Pedido"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_pendingorderdetail_series_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/all_series_number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_pendingorderdetail_title" />

        <TextView
            android:id="@+id/tv_pendingorderdetail_order_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/all_order_number"
            app:layout_constraintEnd_toEndOf="@id/tv_pendingorderdetail_series_number"
            app:layout_constraintStart_toStartOf="@id/tv_pendingorderdetail_series_number"
            app:layout_constraintTop_toBottomOf="@id/tv_pendingorderdetail_series_number" />

        <TextView
            android:id="@+id/tv_pendingorderdetail_vendor_code"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/all_vendor_code"
            app:layout_constraintEnd_toEndOf="@id/tv_pendingorderdetail_series_number"
            app:layout_constraintStart_toStartOf="@id/tv_pendingorderdetail_series_number"
            app:layout_constraintTop_toBottomOf="@id/tv_pendingorderdetail_order_number" />

<!--        <TextView
            android:id="@+id/tv_pendingorderdetail_applicant_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Nombre Solicitante"
            app:layout_constraintEnd_toEndOf="@id/tv_pendingorderdetail_request_date"
            app:layout_constraintStart_toStartOf="@id/tv_pendingorderdetail_request_date"
            app:layout_constraintTop_toBottomOf="@id/tv_pendingorderdetail_transfer_reason" />

        <TextView
            android:id="@+id/tv_pendingorderdetail_preparation_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Fecha de preparación"
            app:layout_constraintEnd_toEndOf="@id/tv_pendingorderdetail_request_date"
            app:layout_constraintStart_toStartOf="@id/tv_pendingorderdetail_request_date"
            app:layout_constraintTop_toBottomOf="@id/tv_pendingorderdetail_applicant_name" />-->

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tv_titlerv1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Detalle de cajas contenedoras"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cl_pendingorderdetail_header" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_pendingorderdetail_box"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_max="125dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_titlerv1"
        app:layout_constraintVertical_bias="0.0"
        tools:listitem="@layout/item_product_to_prepare" />

    <Button
        android:id="@+id/btn_pendingorderdetail_add_box"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="64dp"
        android:visibility="gone"
        android:text="@string/pendingorderdetail_add_box"
        android:background="@drawable/btnripple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rv_pendingorderdetail_box"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_titlerv2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Detalle de cajas contenedoras"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_pendingorderdetail_add_box" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_pendingorderdetail"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_max="200dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_titlerv2"
        app:layout_constraintVertical_bias="0.0"
        tools:listitem="@layout/item_product_to_prepare" />

    <TextView
        android:id="@+id/tv_pendingorderdetail_registered_products_number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:text="@string/all_loading_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rv_pendingorderdetail" />

    <Button
        android:id="@+id/btn_pendingorderdetail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="64dp"
        android:text="@string/all_start_text"
        android:background="@drawable/btnripple"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_pendingorderdetail_registered_products_number"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>