<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/item_draft_instance_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:foreground="?android:attr/selectableItemBackground"
    app:cardUseCompatPadding="true">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/item_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="6dp"
        android:orientation="horizontal">

        <View
            android:id="@+id/status_container"
            android:layout_width="20dp"
            android:layout_height="0dp"
            android:background="@color/status_sent_recent"
            android:gravity="center_vertical"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/itemtransferorder_content"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="5dp"
            android:gravity="center_vertical"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/ivItemTransferOrderAssigned"
            app:layout_constraintStart_toEndOf="@id/status_container"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/llState"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/baseline_account_circle_white_24"
                    android:tint="@color/colorPrimary" />

                <TextView
                    android:id="@+id/tvItemTransOrdSeriesNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="5dp"
                    android:lines="1"
                    android:text="@string/itemtransferorder_series_number"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textSize="12sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/ivNumberLogo"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center_vertical"
                    android:src="@mipmap/ic_description_white_48dp"
                    android:tint="@color/colorPrimary" />

                <TextView
                    android:id="@+id/tvItemTransOrdOrderNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="2dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="2dp"
                    android:text="@string/itemtransferorder_order_number"
                    android:textSize="12sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/baseline_today_white_18"
                    android:tint="@color/colorPrimary" />

                <TextView
                    android:id="@+id/tvItemTransfOrdOrderSeriesNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="5dp"
                    android:lines="1"
                    android:text="@string/itemtransferorder_series_order_number"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textSize="12sp" />

            </LinearLayout>

        </LinearLayout>

        <ImageView
            android:id="@+id/ivItemTransferOrderAssigned"

            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="5dp"
            android:src="@drawable/recibir_mercaderia"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>